# kobe-shot-prediction-ml

./: README.md  dashboard.py  final_model.pkl  kobe.py  pyproject.toml  requirements.txt
conf/base/: catalog.yml
data/02_intermediate/: data_filtered.parquet
data/03_primary/: base_test.parquet  base_train.parquet
data/05_models_input/: final_model.pkl
data/06_models/: final_model.pkl  model_lr.pkl
data/07_model_output/: prediction_model_dt.parquet  prediction_model_lr.parquet  predictions_prod.parquet
data/08_reporting/: decision_tree_model_report.json  logistic_model_report.json  model_comparison.parquet
data/model_output/: predictions_prod.parquet
data/primary/: base_train.parquet
docs/: kobe_diagram.drawio
notebooks/: kobe_pipeline_completo.ipynb
src/kobe_shot_prediction_ml/: __init__.py  __main__.py  kobe_api_fastapi.py  pipeline_registry.py  settings.py
src/kobe_shot_prediction_ml/nodes/: apply_model.py  data_processing.py  model_training.py  old_model_training.py
src/kobe_shot_prediction_ml/pipelines/apply_model/: pipeline.py
src/kobe_shot_prediction_ml/pipelines/data_processing/: pipeline.py
src/kobe_shot_prediction_ml/pipelines/data_split/: pipeline.py
src/kobe_shot_prediction_ml/pipelines/model_training/: pipeline.py
